Added init exposition and start expositions ections

--- a/main.html
+++ b/main.html
@@ -10,18 +10,18 @@
 <body>
 <div id="header">
 <h1 class="title">JINR PAC руководство</h1>
-<h3 class="date">Декабрь 9, 2018</h3>
+<h3 class="date">Декабрь 17, 2018</h3>
 </div>
 <h1>Основы работы спектрометра JINR PAC</h1>
 <p>Таким образом при первоначальном включении спектрометра необходимо выполнить следующие процедуры для запуска накопления:</p>
 <ol style="list-style-type: decimal">
 <li><p><a href="#firmware_FPGA">Загрузить прошивку в ПЛИС</a></p></li>
 <li><p><a href="#firmware_USB">Загрузить прошивку в USB контроллер</a></p></li>
-<li><p>Провести инициализацию параметров ПЛИС</p></li>
-<li><p>Задать параметры экспозиции</p></li>
-<li><p>Провести запуск экспозиции</p></li>
+<li><p><a href="#init_FPGA">Провести инициализацию параметров ПЛИС</a></p></li>
+<li><p><a href="#set_exposition">Задать параметры экспозиции</a></p></li>
+<li><p><a href="#start_exposition">Провести запуск экспозиции</a></p></li>
 </ol>
-<p>В том случае, если питание спектрометра не выключалось и процедуры прошивки и инициализации были выполнены ранее, то первые три пункта можно пропустить.</p>
+<p>В том случае, если питание спектрометра не выключалось и процедуры прошивки и инициализации были выполнены ранее, то первые три пункта этого руководства можно пропустить.</p>
 <h1>Загрузка прошивки в ПЛИС</h1>
 <p>Загрузка прошивки в ПЛИС из ОС Windows XP</p>
 <ol style="list-style-type: decimal">
@@ -98,6 +98,34 @@
 <p><img src="./imgs/set_FPGA_Set_timeofcoinc.png" /></p></li>
 <li><p>Для выбора режима накопления с совпадениями или без совпадений нажмите кнопку Coinc on или Coinc off, соответственно. После этого нажмите кнопку Reset.</p>
 <p><img src="./imgs/set_FPGA_Coinc_mode.png" /></p></li>
+</ol>
+<h1>Установка параметров экспозиции</h1>
+<ol style="list-style-type: decimal">
+<li><p>Запустите Terminal и из него запустите программу dsppac</p></li>
+<li><p>Для установки параметров экспозиции выберите в верхнем меню программы ExpositionMode -&gt; Settings</p>
+<p><img src="./imgs/set_FPGA_Select_menu.png" /></p></li>
+<li><p>В появившемся списке вы можете задать такие параметры экспозиции, как</p>
+<ul>
+<li><p>Сохранять ли накопленные формы сигналов с помощью ползунка-переключателя hdrainer signal OFF/ON (по умолчанию OFF)</p></li>
+<li><p>Время экспозиции (накопления) в поле ACQ time</p>
+<p>В том случае если в этом поле указано целое число, то оно интерпретируется, как время в секундах.</p>
+<p>Также возможны следующие форматы указания времени: &quot;123m&quot;, &quot;123h&quot;, &quot;123d&quot; -, которые задают время экспозиции в минутах (minutes), часах (hours), днях (days), соответственно.</p></li>
+<li><p>Каталог, в котором будут сохраняться накопленные спектры</p></li>
+<li><p>Энергетические окна для каждого из четырех детекторов в полях EN window #1-4 в формате</p>
+<p>&quot;g1_l, g1_r, g2_l, g2_r&quot;, где</p>
+<p>g1_l - целое число, соответствующее <em>левой</em> границе энергетического окна для гамма-кванта <em>1</em> в каскаде</p>
+<p>g1_r - целое число, соответствующее <em>правой</em> границе энергетического окна для гамма-кванта <em>1</em> в каскаде</p>
+<p>g2_l - целое число, соответствующее <em>левой</em> границе энергетического окна для гамма-кванта <em>2</em> в каскаде</p>
+<p>g2_r - целое число, соответствующее <em>правой</em> границе энергетического окна для гамма-кванта <em>2</em> в каскаде</p>
+<p>Все энергетические окна задаются в каналах энергетического спектра.</p></li>
+</ul></li>
+</ol>
+<h1>Запуск экспозиции</h1>
+<ol style="list-style-type: decimal">
+<li><p>Запустите Terminal и из него запустите программу dsppac</p></li>
+<li><p>Для запуска экпозиции нажмите кнопку Start в основном окне программы. При этом при накоплении эта кнопка окажется вдавленной. Для остановки нажмите кнопку Stop.</p>
+<p>При нормальном запуске экспозиции в поле Time будет отображаться время с начала экспозиции и в поле Intensity интенсивность со всех четырех детекторов (в режиме совпадений или без).</p>
+<p><img src="./imgs/start_exposition_Btns_Info_field.png" /></p></li>
 </ol>
 </body>
 </html>
